# ShadowScope

./: .dockerignore  .env.example  .gitattributes  .gitignore  AGENTS.md  CONTRIBUTING.md  README.md  ROADMAP.md  Start-ShadowScope.cmd  alembic.ini  dev.db  docker-compose.yml  leads.json  maintenance.sh  matrix_terms.txt  ontology.foia.json  ontology.json  phase0_plan.md  pyproject.toml  requirements.txt  seed_entities.py
.github/: PULL_REQUEST_TEMPLATE.md
backend/: Dockerfile  app.py  logging_config.py  runtime.py
docs/: AUDIT_BACKLOG_2026-02-24.md  PROJECT_INTENT.md  QUICKSTART_MAC_LINUX.md  QUICKSTART_WINDOWS.md  RUNBOOK.md  SAM_TARGETING_PACKAGE_FIRST50.md  STATE.md  opensearch.md  phase0_plan.md  runbook_ops.md  sam_targeting_rules_v1.json
examples/: ontology_sam_dod_foia_companion.json  ontology_sam_hidden_program_proxy_companion.json  ontology_sam_hidden_program_proxy_exploratory.json  ontology_sam_kwpair_demo.json  ontology_sam_procurement_plus_dod_foia.json  ontology_sam_procurement_plus_dod_foia_hidden_program_proxy.json  ontology_sam_procurement_plus_dod_foia_hidden_program_proxy_exploratory.json  ontology_sam_procurement_starter.json  ontology_usaspending_starter.json
scripts/: bootstrap.ps1  bootstrap.sh  enrich_backfill.py  ingest_usaspending_filtered.py
shadowscope/: __init__.py  cli.py
shadowscope.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_adjudication.py  test_api_correlations_min_event_count.py  test_api_events_filters.py  test_api_events_keyword_like_escape.py  test_api_kw_pair_clusters.py  (+43 more)
(+101 files in other folders)
